mobile almost fixed, still bug in height of staging area when collapsed

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -184,3 +184,9 @@
     }
 }
 
+@media screen and (max-width: 420px)  {
+  .alert  {
+    margin-top: 30px;
+  }
+}
+
